# dq-docker

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  ENVIRONMENT.md  LICENSE  README.md  RELEASE_NOTES.md  buildit.sh  docker-compose.azurite.yml  docker-compose.prod.yml  docker-compose.yml  docker-entrypoint.sh  init_gx_project.py  pyproject.toml  requirements-adls.txt  requirements-delta.txt  requirements-dev.txt  requirements.txt  run_adls_checkpoint.py  runit.sh  setup.py
.github/scripts/: generate_requirements.py  update_pyproject_version.py
.github/workflows/: build-with-data-docs.example.yml  check-requirements.yml  ci-build-and-publish.example.yml  ci.yml  increment-patch-on-push.yml  pr-update-pyproject-version.yml
config/: __init__.py
contracts/: customers.contract.json  customers.contract.yml  customers_2019.contract.json
docker/: README-nginx.md  docker-compose.yml
docker/nginx/: Dockerfile.prod  nginx.conf
docs/: dependency-diagram.md  runtime.md
docs/adapters/: README.md  adls.md  azurite.md  bigquery.md  dbt.md  dbt_databricks.md  dbt_fabric.md  dbt_fabricspark.md  dbt_postgres.md  dbt_redshift.md  gcs.md  postgres.md  s3.md  secure.md  snowflake.md
dq_docker/: __init__.py  _version.py  adls.py  batch_definition.py  checkpoint.py  context.py  data_contract.py  data_docs.py  data_source.py  data_sources.py  expectation_suite.py  expectations.py  odcs_validator.py  run_adls_checkpoint.py  run_checkpoint.py  validation_definition.py  validator.py  version_info_cli.py
dq_docker/adls/: README.md  __init__.py  client.py  utils.py
dq_docker/config/: __init__.py  adls_config.py  data_sources.py  data_sources.yml  gx_config.py
dq_docker/config/data_sources/: ds_adls_gen2.yml.template  ds_adls_gen2_with_helpers.yml.template  ds_sample_data.yml  ds_sample_data_2020.yml
dq_docker/logs/: __init__.py
dq_great_expectations/: .gitignore  init_gx_project.py  version_info.py
dq_great_expectations/checkpoints/: adls_checkpoint.yml
dq_great_expectations/sample_data/customers/: customers_2019.csv  customers_2020.csv
great_expectations/expectations/: adls_data_quality_suite.yml
gx/: .gitignore  great_expectations.yml
gx/checkpoints/: adls_checkpoint.json
gx/expectations/: .ge_store_backend_id  customers.json  customers_2019.json
gx/sample_data/customers/: customers_2019.csv  customers_2020.csv
gx/validation_definitions/: adls_checkpoint.json
scripts/: build-wheel.sh  generate_customers_contract.py  manage_ge_store.py  seed_azurite.py  setup_dev_env.sh  test_adls_local.py  validate_env.py
tests/: test_adls_config_missing_data_source.py  test_adls_keyvault.py  test_adls_package.py  test_adls_unit.py  test_asset_idempotent.py  test_config_data_sources.py  test_contract_normalization.py  test_contract_to_suite.py  test_contract_to_suite_expectation_config.py  test_contract_to_suite_more.py  test_data_contract.py  test_data_sources_yaml_and_adls_config.py  test_datasource_recreate.py  test_end_to_end_checkpoint.py  test_odcs_validator.py  test_run_adls_checkpoint.py  test_run_adls_checkpoint_unit.py  test_update_pyproject_version.py
