[build-system]
requires = [ "setuptools>=61.0", "wheel",]
build-backend = "setuptools.build_meta"

[project]
name = "dq-docker"
version = "0.2.16"
description = "DataQuality Docker project using Great Expectations"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [ "great_expectations[azure]==1.8.1", "azure-storage-file-datalake", "azure-identity", "pandas>=1.3,<2",]
[[project.authors]]
name = "jactools"

[project.optional-dependencies]
dev = [ "pytest>=7.0", "pyyaml>=6.0",]

[project.license]
text = "CC0-1.0"

[project.urls]
Homepage = "https://example.com/jactools/dq-docker"

[project.scripts]
dq-docker-run = "dq_docker.run_adls_checkpoint:main"
dq-version = "dq_docker.version_info_cli:main"

[tool.setuptools.packages.find]
where = [ ".",]
include = [ "dq_docker*", "gx*",]
